feat: update to storybook latest

--- a/package.json
+++ b/package.json
@@ -1,111 +1,120 @@
 {
-	"name": "@njingabv/asha",
-	"version": "0.3.1",
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"type": "module",
-	"publishConfig": {
-		"registry": "https://npm.pkg.github.com"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/NjingaBV/asha.git"
-	},
-	"bugs": {
-		"url": "https://github.com/NjingaBV/asha/issues"
-	},
-	"packageManager": "pnpm@10.20.0",
-	"engines": {
-		"pnpm": "^10.0.0"
-	},
-	"scripts": {
-		"dev": "vite dev",
-		"build": "svelte-kit sync && pnpm package",
-		"build:watch": "svelte-kit sync && pnpm package --watch",
-		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package && NODE_ENV=production postcss src/app.css -o dist/asha.css && publint",
-		"prepublishOnly": "pnpm run package",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:unit": "vitest",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
-		"storybook": "svelte-kit sync && storybook dev -p 6006 --ci --no-open --disable-telemetry",
-		"build-storybook": "svelte-kit sync && storybook build",
-		"release": "semantic-release"
-	},
-	"files": [
-		"dist",
-		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
-	],
-	"devDependencies": {
-		"@babel/core": "^7.28.5",
-		"@chromatic-com/storybook": "^4.1.2",
-		"@commitlint/cli": "^20.1.0",
-		"@commitlint/config-conventional": "^20.0.0",
-		"@eslint/js": "^9.39.0",
-		"@semantic-release/changelog": "^6.0.3",
-		"@semantic-release/commit-analyzer": "^13.0.1",
-		"@semantic-release/git": "^10.0.1",
-		"@semantic-release/github": "^12.0.1",
-		"@semantic-release/npm": "^13.1.1",
-		"@semantic-release/release-notes-generator": "^14.1.0",
-		"@storybook/addon-a11y": "^10.0.3",
-		"@storybook/addon-docs": "^10.0.3",
-		"@storybook/addon-links": "^10.0.3",
-		"@storybook/addon-svelte-csf": "^5.0.10",
-		"@storybook/addon-vitest": "^10.0.3",
-		"@storybook/svelte": "^10.0.3",
-		"@storybook/sveltekit": "^10.0.3",
-		"@sveltejs/adapter-auto": "^7.0.0",
-		"@sveltejs/kit": "^2.48.4",
-		"@sveltejs/package": "^2.5.4",
-		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"@tailwindcss/line-clamp": "^0.4.4",
-		"@tailwindcss/postcss": "^4.1.16",
-		"@tailwindcss/vite": "^4.1.16",
-		"@tsconfig/svelte": "^5.0.5",
-		"@types/youtube": "^0.1.2",
-		"@typescript-eslint/eslint-plugin": "^8.46.3",
-		"@typescript-eslint/parser": "^8.46.3",
-		"@vitest/browser": "4.0.7",
-		"@vitest/browser-playwright": "^4.0.6",
-		"@vitest/coverage-v8": "4.0.7",
-		"@xstate/cli": "^0.5.17",
-		"@xstate/graph": "^3.0.4",
-		"@xstate/svelte": "^5.0.0",
-		"autoprefixer": "^10.4.21",
-		"babel-loader": "^10.0.0",
-		"conventional-changelog-conventionalcommits": "^9.1.0",
-		"cssnano": "^7.1.2",
-		"eslint": "^9.39.0",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-storybook": "^10.0.3",
-		"eslint-plugin-svelte": "^3.13.0",
-		"globals": "^16.5.0",
-		"playwright": "^1.56.1",
-		"postcss": "^8.5.6",
-		"postcss-cli": "^11.0.1",
-		"prettier": "^3.6.2",
-		"prettier-plugin-svelte": "^3.4.0",
-		"publint": "^0.3.15",
-		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"semantic-release": "^25.0.1",
-		"storybook": "^10.0.3",
-		"svelte": "^5.43.2",
-		"svelte-check": "^4.3.3",
-		"svelte-eslint-parser": "^1.4.0",
-		"svelte-loader": "^3.2.4",
-		"svelte-preprocess": "^6.0.3",
-		"svelte2tsx": "^0.7.45",
-		"tailwindcss": "^4.1.16",
-		"tslib": "^2.8.1",
-		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.3",
-		"vite": "^7.1.12",
-		"vitest": "^4.0.6",
-		"xstate": "^5.23.0"
-	}
+  "name": "@njingabv/asha",
+  "version": "0.3.1",
+  "svelte": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "type": "module",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NjingaBV/asha.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NjingaBV/asha/issues"
+  },
+  "packageManager": "pnpm@10.20.0",
+  "engines": {
+    "pnpm": "^10.0.0"
+  },
+  "keywords": [
+    "svelte",
+    "svelte5",
+    "component-library",
+    "tailwindcss",
+    "atomic-design",
+    "design-system",
+    "ui-components"
+  ],
+  "scripts": {
+    "dev": "vite dev",
+    "build": "svelte-kit sync && pnpm package",
+    "build:watch": "svelte-kit sync && pnpm package --watch",
+    "preview": "vite preview",
+    "package": "svelte-kit sync && svelte-package && NODE_ENV=production postcss src/app.css -o dist/asha.css && publint",
+    "prepublishOnly": "pnpm run package",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test:unit": "vitest",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "release": "semantic-release"
+  },
+  "files": [
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@chromatic-com/storybook": "^4.1.2",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/js": "^9.39.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.1",
+    "@semantic-release/npm": "^13.1.1",
+    "@semantic-release/release-notes-generator": "^14.1.0",
+    "@storybook/addon-a11y": "^10.0.5",
+    "@storybook/addon-docs": "^10.0.5",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-links": "^10.0.5",
+    "@storybook/addon-svelte-csf": "^5.0.10",
+    "@storybook/svelte-vite": "^10.0.5",
+    "@storybook/sveltekit": "^10.0.5",
+    "@sveltejs/adapter-auto": "^7.0.0",
+    "@sveltejs/kit": "^2.48.4",
+    "@sveltejs/package": "^2.5.4",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.16",
+    "@tsconfig/svelte": "^5.0.5",
+    "@types/youtube": "^0.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
+    "@vitest/browser": "4.0.7",
+    "@vitest/browser-playwright": "^4.0.7",
+    "@vitest/coverage-v8": "4.0.7",
+    "@xstate/cli": "^0.5.17",
+    "@xstate/graph": "^3.0.4",
+    "@xstate/svelte": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "babel-loader": "^10.0.0",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "cssnano": "^7.1.2",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-storybook": "^10.0.5",
+    "eslint-plugin-svelte": "^3.13.0",
+    "globals": "^16.5.0",
+    "playwright": "^1.56.1",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "publint": "^0.3.15",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "semantic-release": "^25.0.1",
+    "storybook": "^10.0.5",
+    "svelte": "^5.43.3",
+    "svelte-check": "^4.3.3",
+    "svelte-eslint-parser": "^1.4.0",
+    "svelte-loader": "^3.2.4",
+    "svelte-preprocess": "^6.0.3",
+    "svelte2tsx": "^0.7.45",
+    "tailwindcss": "^4.1.16",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.3",
+    "vite": "^7.2.1",
+    "vitest": "^4.0.7",
+    "xstate": "^5.24.0"
+  }
 }
